--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 @import "./containers/support/style.scss";
 @import "./containers/library/style.scss";
 @import "~swiper/swiper-bundle.min.css";
+@import "./containers/landing/style.scss";
 
 @font-face {
   font-family: "Austina Capitton";
@@ -77,7 +78,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // font-size: 1rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   text-align: left;
